--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,5 @@
+<%= javascript_import_module_tag "home_index" %>
+
 <!-- Navigation -->
 <nav class="bg-black/20 backdrop-blur-sm border-b border-white/10">
     <div class="container mx-auto px-4 py-4 flex items-center justify-between">
