Home index - add stylesheet assets

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,4 @@
+<%= stylesheet_link_tag "home_index", "data-turbo-track": "reload" %>
 <%= javascript_import_module_tag "home_index" %>
 
 <!-- Navigation -->
